# Parallel-K-Means

./: .gitignore  CMakeLists.txt  Cluster.h  Point.h  README.md  main_parallel.cpp  main_sequential.cpp
